--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deathbeds/jupyterlab-font-fira-code",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Fira Code Fonts for JupyterLab",
   "keywords": [
     "fonts",
@@ -25,19 +25,22 @@
     "{README.md,LICENSE}"
   ],
   "scripts": {
+    "labextension:build": "jupyter labextension build .",
+    "labextension:build:cov": "tsc -b tsconfig.cov.json && jupyter labextension build .",
     "watch": "jupyter labextension watch --debug ."
   },
   "dependencies": {
-    "@deathbeds/jupyterlab-fonts": "~2.0",
-    "@jupyterlab/application": "~3.1",
-    "firacode": "^5.2.0"
+    "@deathbeds/jupyterlab-fonts": "~2.1",
+    "@jupyterlab/application": "3",
+    "firacode": "^6.2.0"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "~3.1"
+    "@jupyterlab/builder": "^3.4"
   },
   "jupyterlab": {
     "extension": true,
     "outputDir": "../../src/jupyterlab_fonts/labextensions/@deathbeds/jupyterlab-font-fira-code",
+    "webpackConfig": "./webpack.config.js",
     "sharedPackages": {
       "@deathbeds/jupyterlab-fonts": {
         "bundled": false,
