--- a/package.json
+++ b/package.json
@@ -7,23 +7,23 @@
     "bootstrap": "jlpm || jlpm || jlpm && jlpm lint && jlpm bootstrap:js",
     "bootstrap:js": "jlpm lerna bootstrap && jlpm build",
     "build": "jlpm build:schema && lerna run prebuild && jlpm build:ts",
-    "build:ts": "cd packages && cd _meta && tsc -b",
     "build:schema": "lerna run build:schema",
     "build:static": "jlpm webpack -p",
+    "build:ts": "cd packages && cd _meta && tsc -b",
     "clean": "jlpm clean:lib && jlpm clean:test",
     "clean:lib": "lerna exec --parallel -- rimraf lib",
     "clean:test": "rimraf _testoutput",
     "lint": "jlpm lint:py && jlpm lint:ts && jlpm lint:sh",
+    "lint:prettier": "prettier --write *.json *.md *.yml && prettier --write 'packages/**/*.{ts,tsx,css,json,md}'",
     "lint:py": "black nbjss setup.py && flake8 nbjss setup.py",
     "lint:robot": "python -m robot.tidy --inplace tests/**/*.robot && rflint --configure TooManyTestSteps:40 --configure TooFewKeywordSteps:0  tests/**/*.robot",
     "lint:sh": "beautysh -i 2 postBuild",
     "lint:ts": "jlpm lint:prettier && jlpm lint:tslint",
-    "lint:prettier": "prettier --write *.json *.md *.yml && prettier --write 'packages/**/*.{ts,tsx,css,json,md}'",
     "lint:tslint": "tslint --fix -c tslint.json --project tsconfigbase.json 'packages/**/*{.ts,.tsx}'",
     "test": "jlpm test:robot",
     "test:robot": "python -m robot -d _testoutput -X tests/acceptance",
-    "watch:schema": "jlpm lerna run watch:schema --parallel",
-    "watch": "cd packages/_meta && tsc -b -w"
+    "watch": "cd packages/_meta && tsc -b -w",
+    "watch:schema": "jlpm lerna run watch:schema --parallel"
   },
   "prettier": {
     "printWidth": 88,
@@ -31,17 +31,44 @@
     "semi": true,
     "singleQuote": true
   },
+  "nyc": {
+    "all": true,
+    "extends": "@istanbuljs/nyc-config-typescript",
+    "extension": [
+      ".js",
+      ".jsx",
+      ".ts",
+      ".tsx"
+    ],
+    "reporter": [
+      "lcov",
+      "html",
+      "text",
+      "text-summary"
+    ],
+    "require": [
+      "ts-node/register",
+      "source-map-support/register"
+    ],
+    "skip-full": true
+  },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.8.1",
-    "@typescript-eslint/parser": "^4.8.1",
-    "eslint": "^7.14.0",
-    "eslint-config-prettier": "^6.15.0",
-    "eslint-plugin-jest": "^24.1.3",
-    "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-react": "^7.21.5",
-    "lerna": "^4.0.0",
-    "prettier": "^2.3.2",
+    "@ephesoft/webpack.istanbul.loader": "^2.1.0",
+    "@istanbuljs/nyc-config-typescript": "^1.0.2",
+    "@typescript-eslint/eslint-plugin": "^5.39.0",
+    "@typescript-eslint/parser": "^5.39.0",
+    "eslint": "^8.24.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.8",
+    "lerna": "^6.0.1",
+    "nyc": "^15.1.0",
+    "prettier": "^2.7.1",
     "prettier-plugin-packagejson": "^2.2.11",
-    "typescript": "~4.3.2"
+    "source-map-loader": "^4.0.1",
+    "ts-node": "^10.9.1",
+    "typescript": "~4.8.4",
+    "yarn-deduplicate": "^6.0.0"
   }
 }
