--- a/packages/jupyterlab-fonts/package.json
+++ b/packages/jupyterlab-fonts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deathbeds/jupyterlab-fonts",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "description": "Interactive Typography and Style for JupyterLab",
   "keywords": [
     "fonts",
@@ -25,27 +25,30 @@
     "{LICENSE,README.md}"
   ],
   "scripts": {
+    "labextension:build": "jupyter labextension build .",
+    "labextension:build:cov": "tsc -b tsconfig.cov.json && jupyter labextension build .",
     "prebuild": "jlpm prebuild:prep && jlpm prebuild:schema && jlpm prebuild:copy",
+    "prebuild:copy": "prettier src/_schema.d.ts > lib/_schema.d.ts",
     "prebuild:prep": "mkdirp lib",
     "prebuild:schema": "json2ts schema/fonts.json --strictIndexSignatures | prettier --stdin-filepath _schema.d.ts > src/_schema.d.ts",
-    "prebuild:copy": "prettier src/_schema.d.ts > lib/_schema.d.ts",
     "watch": "jupyter labextension watch --debug ."
   },
   "dependencies": {
-    "@jupyterlab/application": "~3.1",
-    "@jupyterlab/mainmenu": "~3.1",
-    "@jupyterlab/notebook": "~3.1",
-    "jss": "^10.7.1",
-    "jss-preset-default": "^10.7.1"
+    "@jupyterlab/application": "3",
+    "@jupyterlab/mainmenu": "3",
+    "@jupyterlab/notebook": "3",
+    "jss": "^10.9.2",
+    "jss-preset-default": "^10.9.2"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "~3.1",
-    "json-schema-to-typescript": "^10.1.4",
+    "@jupyterlab/builder": "^3.4",
+    "json-schema-to-typescript": "^11.0.2",
     "mkdirp": "^1.0.4"
   },
   "jupyterlab": {
     "extension": "lib/plugin.js",
     "schemaDir": "schema",
-    "outputDir": "../../src/jupyterlab_fonts/labextensions/@deathbeds/jupyterlab-fonts"
+    "outputDir": "../../src/jupyterlab_fonts/labextensions/@deathbeds/jupyterlab-fonts",
+    "webpackConfig": "./webpack.config.js"
   }
 }
