--- a/setup.cfg
+++ b/setup.cfg
@@ -5,6 +5,10 @@ license_file = LICENSE
 classifiers =
     Development Status :: 4 - Beta
     Framework :: Jupyter
+    Framework :: Jupyter :: JupyterLab
+    Framework :: Jupyter :: JupyterLab :: 3
+    Framework :: Jupyter :: JupyterLab :: Extensions
+    Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt
     Intended Audience :: Developers
     Intended Audience :: Information Technology
     License :: OSI Approved :: BSD License
@@ -13,6 +17,7 @@ classifiers =
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
 
 [options]
 python_requires = >=3.7
