--- a/.binder/environment.yml
+++ b/.binder/environment.yml
@@ -28,6 +28,7 @@ dependencies:
   - geckodriver
   - robotframework >=6
   - robotframework-jupyterlibrary >=0.4.1
+  - robotframework-pabot
   - robotframework-robocop >=2.6.0
   - robotframework-tidy >=3.3.1
   # demo toys
