--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -83,7 +83,7 @@ jobs:
       - name: upload (dist)
         uses: actions/upload-artifact@v3
         with:
-          name: jupyterlab-fonts ${{ github.run_number }} dist
+          name: jupyterlab-fonts-${{ github.run_number }}-dist
           path: ./dist
 
   test:
@@ -142,15 +142,10 @@ jobs:
             matrix.python-version }}
           path: ./build/${{ matrix.os }}-${{ matrix.python-version }}.conda.lock
 
-      - name: uninstall node
-        shell: bash -l {0}
-        run: |
-          mamba uninstall -y nodejs
-
       - name: download (dist)
         uses: actions/download-artifact@v3
         with:
-          name: jupyterlab-fonts ${{ github.run_number }} dist
+          name: jupyterlab-fonts-${{ github.run_number }}-dist
           path: ./dist
 
       - name: clean
@@ -173,10 +168,10 @@ jobs:
         shell: bash -l {0}
         run: doit test || doit test || doit test
 
-      - name: upload (atest)
+      - name: upload (reports)
         if: always()
         uses: actions/upload-artifact@v3
         with:
           name: |
-            jupyterlab-fonts ${{ github.run_number }} atest ${{ runner.os }} ${{ matrix.python-version }}
-          path: ./build/atest
+            jupyterlab-fonts-${{ github.run_number }}-reports-${{ runner.os }}-f${{ matrix.python-version }}
+          path: ./build/reports
