--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
+  "workspaces": {
+    "packages": [
+      "packages/*"
+    ]
+  },
   "scripts": {
     "bootstrap": "jlpm || jlpm || jlpm && jlpm lint && jlpm bootstrap:js",
     "bootstrap:js": "jlpm lerna bootstrap && jlpm build",
@@ -14,7 +16,7 @@
     "clean:lib": "lerna exec --parallel -- rimraf lib",
     "clean:test": "rimraf _testoutput",
     "lint": "jlpm lint:py && jlpm lint:ts && jlpm lint:sh",
-    "lint:prettier": "prettier --write *.json *.md *.yml && prettier --write 'packages/**/*.{ts,tsx,css,json,md}'",
+    "lint:prettier": "prettier --write \"./*{json,md,yml}\" \"{packages,.github,.binder}/**/*.{ts,tsx,css,json,md}\"",
     "lint:py": "black nbjss setup.py && flake8 nbjss setup.py",
     "lint:robot": "python -m robot.tidy --inplace tests/**/*.robot && rflint --configure TooManyTestSteps:40 --configure TooFewKeywordSteps:0  tests/**/*.robot",
     "lint:sh": "beautysh -i 2 postBuild",
@@ -68,7 +70,91 @@
     "prettier-plugin-packagejson": "^2.2.11",
     "source-map-loader": "^4.0.1",
     "ts-node": "^10.9.1",
-    "typescript": "~4.8.4",
-    "yarn-deduplicate": "^6.0.0"
+    "typescript": "~5.1.6",
+    "yarn-berry-deduplicate": "^6.1.1"
+  },
+  "doitoml": {
+    "prefix": "js-meta",
+    "paths": {
+      "pj": [
+        "package.json"
+      ],
+      "yarn_history": [
+        ".yarn/install-state.gz"
+      ],
+      "all_md": [
+        ":glob::.::*.md",
+        ":rglob::.github::*.md",
+        ":glob::packages::*/*.md"
+      ],
+      "all_json": [
+        ":glob::.::*.json",
+        ":glob::.binder::*.json",
+        ":glob::packages::*/*.json",
+        ":glob::packages::*/schema/*.json"
+      ],
+      "all_ts": [
+        ":glob::packages::*/src/**/*.ts",
+        ":glob::packages::*/src/**/*.tsx"
+      ],
+      "all_css": [
+        ":glob::packages::*/style/**/*.css"
+      ]
+    },
+    "env": {
+      "YARN_ENABLE_IMMUTABLE_INSTALLS": "false"
+    },
+    "tokens": {
+      "jlpm": [
+        "::dt::conda_run_build",
+        "jlpm"
+      ]
+    },
+    "tasks": {
+      "setup": {
+        "file_dep": [
+          "::pj",
+          "::dt::env_build_history"
+        ],
+        "targets": [
+          "::yarn_history"
+        ],
+        "actions": [
+          [
+            "::jlpm",
+            "install"
+          ],
+          [
+            "::jlpm",
+            "yarn-berry-deduplicate",
+            "--strategy=fewer",
+            "--fail"
+          ]
+        ]
+      },
+      "fix": {
+        "prettier": {
+          "actions": [
+            [
+              "::jlpm",
+              "lint:prettier"
+            ]
+          ],
+          "file_dep": [
+            "::yarn_history",
+            "::all_md",
+            "::all_json",
+            "::all_ts",
+            "::all_css"
+          ]
+        }
+      }
+    }
+  },
+  "resolutions": {
+    "@deathbeds/jupyterlab-font-anonymous-pro": "file:./packages/jupyterlab-font-anonymous-pro",
+    "@deathbeds/jupyterlab-font-dejavu-sans-mono": "file:./packages/jupyterlab-font-dejavu-sans-mono",
+    "@deathbeds/jupyterlab-font-fira-code": "file:./packages/jupyterlab-font-fira-code",
+    "@deathbeds/jupyterlab-fonts": "file:./packages/jupyterlab-fonts"
   }
 }
