--- a/packages/jupyterlab-font-dejavu-sans-mono/package.json
+++ b/packages/jupyterlab-font-dejavu-sans-mono/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deathbeds/jupyterlab-font-dejavu-sans-mono",
-  "version": "2.1.2",
+  "version": "3.0.0.alpha0",
   "description": "Dejavu Sans Mono Fonts for JupyterLab",
   "keywords": [
     "fonts",
@@ -32,11 +32,11 @@
     "watch": "jupyter labextension watch --debug ."
   },
   "dependencies": {
-    "@deathbeds/jupyterlab-fonts": "~2.1.2",
-    "@jupyterlab/application": "3"
+    "@deathbeds/jupyterlab-fonts": "~3.0.0.alpha0",
+    "@jupyterlab/application": "3 || 4"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.4",
+    "@jupyterlab/builder": "^4.0.0",
     "dejavu-fonts-ttf": "^2.37.3"
   },
   "jupyterlab": {
