--- a/packages/jupyterlab-font-fira-code/package.json
+++ b/packages/jupyterlab-font-fira-code/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@deathbeds/jupyterlab-font-fira-code",
-  "version": "2.1.2",
+  "version": "3.0.0.alpha0",
   "description": "Fira Code Fonts for JupyterLab",
   "keywords": [
     "fonts",
@@ -30,12 +30,12 @@
     "watch": "jupyter labextension watch --debug ."
   },
   "dependencies": {
-    "@deathbeds/jupyterlab-fonts": "~2.1.2",
-    "@jupyterlab/application": "3",
+    "@deathbeds/jupyterlab-fonts": "~3.0.0.alpha0",
+    "@jupyterlab/application": "3 || 4",
     "firacode": "^6.2.0"
   },
   "devDependencies": {
-    "@jupyterlab/builder": "^3.4"
+    "@jupyterlab/builder": "^4.0.0"
   },
   "jupyterlab": {
     "extension": true,
