--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ status = true
 subtasks = true
 
 [tool.doitoml]
-config_paths = [":get::toml::.github/specs/__lock__.toml::"]
+config_paths = [":get::toml::.github/specs/__lock__.toml::", ":get::json::package.json::doitoml"]
 prefix = "dt"
 validate = true
 
@@ -82,3 +82,68 @@ actions = [
 doc = "Format python source with `ruff` and `black`"
 file_dep = ["::ppt", "::all_py", '::env_build_history']
 task_dep = ["dt:fix:ssort"]
+
+[tool.ruff]
+cache-dir = "build/.cache/ruff"
+ignore = [
+  "D211",
+  "D213",
+  # if it doesn't bother mypy...
+  "ANN101",
+  "ANN401",
+  "PGH003",
+  # keep 3.8 compat
+  "UP006",
+  "UP007",
+  # meh
+  "N812",
+]
+select = [
+  "A",
+  "ARG",
+  "B",
+  "BLE",
+  "C4",
+  "C90",
+  "COM",
+  "D",
+  "DJ",
+  "DTZ",
+  "E",
+  "EM",
+  # "ERA", # causes syntax errors, check later
+  "EXE",
+  "F",
+  "FBT",
+  "G",
+  "I",
+  "ICN",
+  "INP",
+  "ISC",
+  "N",
+  "NPY",
+  "PD",
+  "PGH",
+  "PIE",
+  "PL",
+  "PT",
+  "PTH",
+  "PYI",
+  "Q",
+  "RET",
+  "RSE",
+  "RUF",
+  "S",
+  "SIM",
+  "SLF",
+  "T10",
+  "T20",
+  "TCH",
+  "TID",
+  "UP",
+  "W",
+  "YTT",
+]
+
+[tool.ruff.isort]
+known-first-party = ["jupyterlab_fonts"]
