--- a/.github/specs/_utest.yml
+++ b/.github/specs/_utest.yml
@@ -2,6 +2,7 @@ dependencies:
   - coverage
   - pytest-asyncio
   - pytest-console-scripts
+  - pytest-cov
   - pytest-html
   - pytest-json-report
   - pytest-xdist
