normalize default and current lab

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,28 +75,28 @@ all_robot = [":rglob::atest::*.robot", ":rglob::atest::*.resource"]
 all_scripts = [":glob::scripts::*.py"]
 all_toml = ["::ppt"]
 atest_dir = ["atest"]
-atest_report = ["build/reports/robot/${THIS_SUBDIR}_${DEFAULT_LAB}"]
-atest_report_html = ["build/reports/robot/${THIS_SUBDIR}_${DEFAULT_LAB}/log.html"]
+atest_report = ["build/reports/robot/${THIS_SUBDIR}_${JLF_LAB}"]
+atest_report_html = ["build/reports/robot/${THIS_SUBDIR}_${JLF_LAB}/log.html"]
 dodo = ["dodo.py"]
 env_atest_history = [".envs/atest_${THIS_SUBDIR}/conda-meta/history"]
 env_atest_prefix = [".envs/atest_${THIS_SUBDIR}"]
 env_build_history = [".envs/build_${THIS_SUBDIR}_${DEFAULT_LAB}/conda-meta/history"]
 env_build_prefix = [".envs/build_${THIS_SUBDIR}_${DEFAULT_LAB}"]
-env_lab_history = [".envs/lab_${THIS_SUBDIR}_${DEFAULT_LAB}/conda-meta/history"]
-env_lab_prefix = [".envs/lab_${THIS_SUBDIR}_${DEFAULT_LAB}"]
+env_lab_history = [".envs/lab_${THIS_SUBDIR}_${JLF_LAB}/conda-meta/history"]
+env_lab_prefix = [".envs/lab_${THIS_SUBDIR}_${JLF_LAB}"]
 env_lock_dir = [".github/locks"]
-ext_list = ["build/labext/lab_${THIS_SUBDIR}_${DEFAULT_LAB}.txt"]
+ext_list = ["build/labext/lab_${THIS_SUBDIR}_${JLF_LAB}.txt"]
 git_info = ["build/git_info.json"]
 license = ["LICENSE"]
 lock_build = ["build/locks"]
 lock_files = [":glob::build/locks::*.txt::/s/::build/locks::.github/locks::/s/::.txt::.conda.lock"]
 lock_headers = [":glob::build/locks::*.txt"]
 lock_preflight_yml = ["build/locks/_preflight.yml"]
-pip_freeze = ["build/pip/lab_${THIS_SUBDIR}_${DEFAULT_LAB}.txt"]
+pip_freeze = ["build/pip/lab_${THIS_SUBDIR}_${JLF_LAB}.txt"]
 ppt = ["pyproject.toml"]
-pytest_html_cov = ["build/reports/pytest/${THIS_SUBDIR}_${DEFAULT_LAB}/htmlcov/index.html"]
-pytest_html_cov_index = ["build/reports/pytest/${THIS_SUBDIR}_${DEFAULT_LAB}/htmlcov"]
-pytest_html_report = ["build/reports/pytest/${THIS_SUBDIR}_${DEFAULT_LAB}/index.html"]
+pytest_html_cov = ["build/reports/pytest/${THIS_SUBDIR}_${JLF_LAB}/htmlcov/index.html"]
+pytest_html_cov_index = ["build/reports/pytest/${THIS_SUBDIR}_${JLF_LAB}/htmlcov"]
+pytest_html_report = ["build/reports/pytest/${THIS_SUBDIR}_${JLF_LAB}/index.html"]
 readme = ["README.md"]
 sdist = ["dist/${PY_NAME}-${PY_VERSION}.tar.gz"]
 wheel = ["dist/${PY_NAME}-${PY_VERSION}-py3-none-any.whl"]
